--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "graceful-fs": "^4.1.11",
+    "iconv-lite": "^0.4.18",
     "mkdirp": "^0.5.1",
     "mocha": "^3.2.0",
     "q": "^1.4.1",
